Bug 1018639 - Maintain separate cursors in chrome and client processes. r=roc

The TabChild now maintains a concept of the current cursor for the child
process.  This value is asynchronously cached in the TabParent.  The
chrome process now establishes cursor on its own - consulting the
TabParent when the cursor enters/exits the tab.  While the cursor is
over tab content, changes to the TabParent's cached cursor are
immediately forwarded to the widget.